# attention_control

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  dvc.yaml  pyproject.toml  ruff.toml
.dvc/: config
data/: .gitignore
data/raw/: .gitignore  README.md  auc.zip.dvc  mini_dataset.zip.dvc  sfd_with_labels.zip.dvc  sfd_without_labels.zip.dvc
docker/: docker-compose.yml
docker/mlflow_image/: Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore  efficientnet-b0.pt.dvc  epoch=1_valid_acc=0.09_valid_loss=2.73.ckpt.dvc
src/configs/: .gitignore  augmentations_config.py  base_config.py  default_config.yaml
src/data/: augmentations.py  data_loader.py  data_splitter.py  get_datamodule.py
src/models/: eff_net.py  predict_model.py
src/scripts/: split_dataset.py  test_model.py  train_model.py
src/utils/: utils.py
